actualizacion commit